# LineSegmentsDetection

./: .gitignore  LICENSE  README.md  mex_compileCommand.m
(not used)DL-HAWP Holistically-AttractedWireframeParsing/misc/: york2old.py  york2wireframe_deprecated.py
(not used)IP_LSM/: README.txt  demo_LSM.m  logME.txt
(not used)IP_LSM/display/: display_image.m  drawlines.m
(not used)IP_LSM/lsm/: mergeTwoLines.m
CannyLines/Canny_ParameterFree/: CMakeLists.txt
CannyLinesPF/: cannyPF_demo.asv  cannyPF_demo.m  cannyPF_mex.m  main.cpp  post_dataProcess.asv  post_dataProcess.m  test_data.asv
CannyLinesPF/include/: CMakeLists.txt
CannyLinesPF/lib/: CannyPF.h  ChainFromEdgeMap.cpp  ChainFromEdgeMap.h
CannyLinesPF/mexfile/: build_mex.asv  build_mex.m  cannyPF_mex.asv  cannyPF_mex.cpp  cannyPF_mex.mexw64  tmp.m  tmp.txt
CannyLinesPF/mexfiles/: cannyPF_mexFunction.asv  cannyPF_mexFunction.cpp
CannyLinesPF/opencv_matlab_converter/: README.md  license.txt  opencv_matlab_mex.cpp  opencv_matlab_standalone.cpp
CannyLinesPF/source/: CannyPF.cpp
CannyLinesV3/: CMakeLists.txt
CannyLinesV3/lib/: CannyLine.h  MetaLine.cpp
CannyLinesV3/mexfile/src/: main.cpp
CannyLines_PF/: CMakeLists.txt  CannyLines_PF.sln  CannyLines_PF.vcxproj  CannyLines_PF.vcxproj.filters
CannyLines_PF/lib/: CMakeLists.txt  CannyPF.cpp  CannyPF.h  ChainFromEdgeMap.h
CannyLines_PF/src/: CMakeLists.txt  main.cpp
CannyLines_PF/x64/Release/: CannyLines_PF.exe.recipe  CannyLines_PF.iobj  CannyLines_PF.ipdb  CannyLines_PF.vcxproj.FileListAbsolute.txt
CannyLines_PF/x64/Release/CannyLines_PF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CannyLines_PF.lastbuildstate  CannyLines_PF.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CannyLines_PF1/: CMakeLists.txt  CMakeSettings.json
CannyLines_PF1/lib/: CMakeLists.txt  CannyPF.h  ChainFromEdgeMap.h
CannyLines_PF1/src/: CMakeLists.txt  main.cpp
CannyPF/: CMakeLists.txt  demo_CannyPF.m  demo_singleImage.m  post_dataProcess.m
CannyPF/mexfile/: build_mex.m
CannyPF/mexfile/src/: CMakeLists.txt
Classical_Image_Process/: mex_edgeDetecter.cpp
Classical_Image_Process/IP_3CannyPF/: demo_CannyPF_old_with_edgeChains.m  demo_CannyPF_with_edgeLines.m
Classical_Image_Process/IP_5MCMLSD/: Readme.txt  demo_mcmlsdV2_singleImage.m
Classical_Image_Process/g_dataset/: label_mandrel_borders.py
Classical_Image_Process/helper0_train/: train1_singleSample.m
Classical_Image_Process/helper1_extractFeature/: compose_line_from_edgeChains.m  extract_borders.m  filter_by_angle.m  filter_by_window.m  get_window_features.m
Classical_Image_Process/helper2_calcRMSE/: RMSE1_get_edgePoints.m  RMSE2_get_border_pos.m  calc_RMSE.m  load_JSON.m
Classical_Image_Process/helper3_postAnalyse/: README.asv  README.txt  USER_check_result_from_table.m  USER_copy_img_from_table.m  USER_final_test_summary.asv  USER_final_test_summary.m  USER_plot_hist.m  choose_corner_case.m  get_final_result.m  select_img_from_corner_case.m  set_metric_RMSE.m  tmp.mlx
Classical_Image_Process/helperPlots/: draw_edgeLines.m
DL-HAWP Holistically-AttractedWireframeParsing/: setup.py
DL-HAWP Holistically-AttractedWireframeParsing/misc/: dwp_combine.py  lsd.py  wireframe_stat.py  york2wireframe.py
DL_F-Clip FullyConvolutionalLineParsing/: .gitignore  demo.py  test.py  train.py
DL_F-Clip FullyConvolutionalLineParsing/FClip/: datasets.py  line_parsing.py  trainer.py  utils.py  visualize.py
DL_F-Clip FullyConvolutionalLineParsing/config/: base.yaml  fclip_HG1_D2.yaml  fclip_HG2_LB.yaml  fclip_HR.yaml
DL_F-Clip FullyConvolutionalLineParsing/dataset/: myNpz.py  myNpz_line.py  wireframe_line.py
DL_F-Clip FullyConvolutionalLineParsing/myAPP/: final_test_analyse_by_plot_DL.py  final_test_analyse_by_plot_IP.py  myTest.py  myTest_from_LCNN.py  tmpCommands.txt
DL_HT-HAWP DeepHoughTransformLinePriors/: readme.txt
DL_HT-HAWP DeepHoughTransformLinePriors/ht-lcnn/: .gitignore  Image_read_failed.txt  demo.py  myTmp.ipynb  process.py  tmp.ipynb  tmpCommands.txt  train.py
DL_HT-LCNN DeepHoughTransformLinePriors/ht-lcnn/: Image_read_failed.txt  eval-sAP.py  process.py  train.py
IP_1LSD/: demo_lsd.m  edge_detecter.cpp
IP_1LSD/helperFuncs/: calc_edges_number_and_length.m  compose_line_from_edgeChains.m
IP_1LSD/lib/: run_edge_detecter.hpp
IP_1LSD/mexAPI/: main.m  mex_compileCommand.m  mex_edgeDetecter.cpp  mex_edgeDetecter.mexw64
IP_1LSD/myAPP/: check_result_from_table.asv  check_result_from_table.m  main.asv  main0_header.m  main2_valid.m  main3_test.m  temp.mlx  tmp.mlx  train1_singleSample.asv  train1_singleSample.m  train2_singleFolder.m  (+1 more)
IP_2EDLines/: demo_EDLines.m
IP_3CannyPF/: demo_CannyPF_single_image.m  demo_CannyPF_with_edgeLines.m
IP_4CannyLinesV3/: demo_CannyLines.m
IP_4CannyLinesV3/mexAPI/: CMakeLists.txt  mex_compileCommand.m  mex_edgeDetecter.mexw64  test.m
IP_4CannyLinesV3/mexAPI/src/: MetaLine.cpp  buffer_2d.cpp
IP_5MCMLSD/: BACKUP_of_demo.m  demo_mcmlsdV2_singleImage.m
IP_CannyLinesV3/mexAPI/lib/: CMakeLists.txt  CannyLine.h  run_edge_detecter.hpp
IP_CannyLinesV3/mexAPI/src/: CMakeLists.txt  MetaLine.cpp  run_edge_detecter.cpp
IP_CannyPF/: demo_CannyPF.asv  demo_CannyPF.m  demo_CannyPF_single_image.m  demo_single_image.m  temp.m  temp_test.m  test_data_post_process.asv  test_data_post_process_extracting.m  test_data_select_target.m  test_data_select_target_plotting.m  test_tmp.m  tmp.m
IP_LSM/: demo_LSM.m  demo_singleImage.m  test_dataSelectTarget.asv  test_dataSelectTarget.m  tmp.asv  tmp.m
IP_MCMLSD/: BACKUP_of_demo.asv  BackUp_of_demo.m  Readme.txt  demo_mcmlsdV2.m  demo_mcmlsdV2_singleImage.m
LSM/: README.txt  demo.m  logME.txt  test.c  test.mexw64
Latex/: 3-2 DL方法.bib  new-文献综述.bib
MCMLSD/: Copy_of_demo_start_v2.m  README.asv  Readme.txt  demo_singleImage.m  demo_start_v2.asv  demo_start_v2.m  logME.txt
__MACOSX/: ._MCMLSD
g_results/: __final_analyse_test result_of_csv(IP+DL).ipynb
test_CMakeProj/: CMakeLists.txt
test_CMakeProj/test_CMakeProj/: CMakeLists.txt  CMakeProj_test.cpp  CMakeProj_test.h
(+1019 files in other folders)
